# carbrains

./: .gitignore  LICENSE  readme.md
brains/: Cargo.toml  nn_structure.drawio  readme.md  todo.md
brains/src/: config.rs  error.rs  gen.rs  lib.rs
brains/src/nn/: mod.rs
game/: .gitignore  active_config.json
game/Assets/: DefaultConfigExporter.cs  FollowLeaderCam.cs  FollowPlayerCam.cs  GameFolders.cs  NeuralNetworkTrainer.cs  SpawnOnStartLine.cs
game/Assets/Brains/: BrainDll.cs  Population.cs
game/Assets/Car/: CarController.cs  CarVision.cs  ICarInputSource.cs  KeyboardCarInputSource.cs  LongRunningTimer.cs  NeuralCar.prefab  NeuralCarInputSource.cs  NullObject.cs  Player.prefab
game/Assets/Maths/: ILoopedSpline.cs  LoopedPolygonSpline.cs  MooreCurve.cs  NurbsCurve.cs
game/Assets/RaceTrack/: Border.mat  CheckpointGenerator.cs  Grass.mat  PureWhite.shader  RaceTrackBoundaryGenerator.cs  RaceTrackContourExtractor.cs  RaceTrackGenerator.cs  RaceTrackRenderer.cs  RaceTrackShapeRenderer.cs  Road.mat  Road.shader
game/Assets/Scenes/: SampleScene.unity
game/Assets/UI/: GeneratePanel.cs  GenerationLabel.cs  LapTimeLabel.cs  TrackItem.prefab  TrackPanel.cs  TrackSeedItem.cs  TrainPanel.cs
game/ProjectSettings/: Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset
